add user/index + show to navbar

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,8 +6,10 @@
   </head>
   <body>
     <nav>
-      <a href="/characters">See all characters!</a> |
-      <a href="/characters/new">Add a character!</a>
+      <a href="/characters">See all characters</a> |
+      <a href="/characters/new">Add a character</a> |
+      <a href="/users">See all users</a> |
+      <a href="/users/new">Add a new user</a>
     </nav>
     <%= yield %>
   </body>
