--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,1 +1,7 @@
 <h1>Signup</h1>
+
+<form action="/users" method="post">
+  <label for="username">Username:</label><br>
+  <input type="text" id="username" name="username"><br>
+  <input type="submit" value="Signup!">
+</form>
