--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -15,6 +15,16 @@ h1 {
   font-weight: bolder;
 }
 
+h3 {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  font-family: sans-serif;
+  color: white;
+  font-size: 2em;
+  font-weight: bolder;
+}
+
+
 .character h1 {
   color: purple;
 }
@@ -46,6 +56,7 @@ nav > a {
   font-size: 1.3em;
   border: 3px solid white;
 }
+
 
 .card img {
   width: 300px;
