--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -24,6 +24,14 @@ h3 {
   font-weight: bolder;
 }
 
+a:link {
+  color: white;
+}
+
+a:visited {
+  color: yellow;
+}
+
 
 .character h1 {
   color: purple;
