--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -3,5 +3,7 @@
 <form action="/users" method="post">
   <label for="username">Username:</label><br>
   <input type="text" id="username" name="username"><br>
+  <label for="password">Password:</label><br>
+  <input type="password" id="password" name="password"><br>
   <input type="submit" value="Signup!">
 </form>
